--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.3.4</version>
 		</dependency>
-		
+
 		<!-- jenkins -->
 		<dependency>
 			<groupId>com.offbytwo.jenkins</groupId>
@@ -96,13 +96,28 @@
 			<version>1.5</version>
 		</dependency>
 		<!-- jenkins -->
-		
+
 		<!-- moji 抄襲比對 -->
 		<dependency>
 			<groupId>it.zielke</groupId>
 			<artifactId>moji</artifactId>
 			<version>1.0.2</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/javax.portlet/portlet-api -->
+		<dependency>
+			<groupId>javax.portlet</groupId>
+			<artifactId>portlet-api</artifactId>
+			<version>2.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.liferay.portal/portal-service -->
+		<dependency>
+			<groupId>com.liferay.portal</groupId>
+			<artifactId>portal-service</artifactId>
+			<version>6.0.2</version>
+		</dependency>
+
 
 
 	</dependencies>
