--- a/pom.xml
+++ b/pom.xml
@@ -151,10 +151,19 @@
 			<version>5.1.38</version>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<finalName>ProgEdu</finalName>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.6.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
