--- a/src/main/webapp/WEB-INF/classes/form.properties
+++ b/src/main/webapp/WEB-INF/classes/form.properties
@@ -13,9 +13,9 @@ top_navbar_manage = \u8a2d\u5b9a
 top_navbar_manageStudent = \u5b78\u751f\u7ba1\u7406
 top_navbar_manageHW = \u4f5c\u696d\u7ba1\u7406
 top_navbar_manageGroup = \u5c08\u984c\u7ba1\u7406
-top_navbar_language = \u4e2d\u6587
+top_navbar_language = \u8a9e\u8a00
 top_navbar_lanChinese = \u4e2d\u6587
-top_navbar_lanEnglish = \u82f1\u6587
+top_navbar_lanEnglish = English
 top_navbar_signOut = \u767b\u51fa
 
 teacherHW_th_studentId = \u5b78\u865f
