--- a/src/main/resources/config/jenkins_config.properties
+++ b/src/main/resources/config/jenkins_config.properties
@@ -1,5 +1,5 @@
 JENKINS_HOST_URL = http://140.134.26.71:38080
-JENKINS_ROOT_USERNAME = GJen
+JENKINS_ROOT_USERNAME = root
 JENKINS_ROOT_PASSWORD = zxcv1234
-JENKINS_API_TOKEN = 02031fefb728e700973b6f3e5023a64c
-JENKINS_ROOT_URL = http://GJen:02031fefb728e700973b6f3e5023a64c@140.134.26.71:38080
+JENKINS_API_TOKEN = 2b0e6c961199fe4f5ec8043bdd9f74a2
+JENKINS_ROOT_URL = http://root:2b0e6c961199fe4f5ec8043bdd9f74a2@140.134.26.71:38080
