--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -90,19 +91,7 @@
 			<version>0.3.7</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-client</artifactId>
-			<version>1.5</version>
-		</dependency>
 		<!-- jenkins -->
-
-		<!-- moji 抄襲比對 -->
-		<dependency>
-			<groupId>it.zielke</groupId>
-			<artifactId>moji</artifactId>
-			<version>1.0.2</version>
-		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/javax.portlet/portlet-api -->
 		<dependency>
