fix get config resource

--- a/src/main/resources/config/jenkins_config.properties
+++ b/src/main/resources/config/jenkins_config.properties
@@ -1,5 +1,7 @@
-JENKINS_HOST_URL = http://140.134.26.72:38080
+JENKINS_HOST_URL = http://140.134.26.71:38080
 JENKINS_ROOT_USERNAME = root
 JENKINS_ROOT_PASSWORD = zxcv1234
+#JENKINS_API_TOKEN = 2b0e6c961199fe4f5ec8043bdd9f74a2
+#JENKINS_ROOT_URL = http://root:2b0e6c961199fe4f5ec8043bdd9f74a2@140.134.26.71:38080
 JENKINS_API_TOKEN = 9b60f57bef52f1981bb7ac95aee55043
-JENKINS_ROOT_URL = http://root:9b60f57bef52f1981bb7ac95aee55043@140.134.26.72:38080
+JENKINS_ROOT_URL = http://root:9b60f57bef52f1981bb7ac95aee55043@140.134.26.71:38080
