修改login page UI

--- a/src/main/resources/config/course_config.properties
+++ b/src/main/resources/config/course_config.properties
@@ -1,2 +1,3 @@
 COURSE_NAME = OOP
+COURSE_FULL_NAME=106-1 \u7269\u4ef6\u5c0e\u5411\u8a2d\u8a08\u5be6\u7fd2<br>(OO Deisgn Lab.)
 COURSE_SCHOOL_EMAIL = @fcu.edu.tw
