--- a/src/main/resources/config/gitlab_config.properties
+++ b/src/main/resources/config/gitlab_config.properties
@@ -1,8 +1,10 @@
-#GITLAB_HOST_URL = http://140.134.26.72:10080
-GITLAB_HOST_URL = http://140.134.26.71:20080
 GITLAB_ROOT_USERNAME = root
 GITLAB_ROOT_PASSWORD = iecsfcu123456
-GITLAB_API_TOKEN = yUnRUT5ex1s3HU7yQ_g-
-#GITLAB_API_TOKEN = AsJEDqhu2SJymBY4Gfeh
-#GITLAB_ROOT_URL = http://root:iecsfcu123456@140.134.26.72:10080
-GITLAB_ROOT_URL = http://root:iecsfcu123456@140.134.26.71:20080
+
+#GITLAB_HOST_URL = http://140.134.26.71:20080
+#GITLAB_API_TOKEN = yUnRUT5ex1s3HU7yQ_g-
+#GITLAB_ROOT_URL = http://root:iecsfcu123456@140.134.26.71:20080
+
+GITLAB_HOST_URL = http://140.134.26.72:10080
+GITLAB_API_TOKEN = AsJEDqhu2SJymBY4Gfeh
+GITLAB_ROOT_URL = http://root:iecsfcu123456@140.134.26.72:10080
