--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>progedu</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ProjEdu Webapp</name>
+	<name>ProgEdu Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
