--- a/src/main/resources/config/gitlab_config.properties
+++ b/src/main/resources/config/gitlab_config.properties
@@ -5,6 +5,7 @@ GITLAB_HOST_URL = http://140.134.26.71:20080
 GITLAB_API_TOKEN = yUnRUT5ex1s3HU7yQ_g-
 GITLAB_ROOT_URL = http://root:iecsfcu123456@140.134.26.71:20080
 
-#GITLAB_HOST_URL = http://140.134.26.72:10080
-#GITLAB_API_TOKEN = AsJEDqhu2SJymBY4Gfeh
-#GITLAB_ROOT_URL = http://root:iecsfcu123456@140.134.26.72:10080
+#GITLAB_CONTAINER = http://4e248dddce33
+#GITLAB_HOST_URL = http://mselab.iecs.fcu.edu.tw:2234
+#GITLAB_API_TOKEN = Cz9Ejf5iPn7KFqSY83LS
+#GITLAB_ROOT_URL = http://root:iecsfcu123456@140.134.26.72:2234
