--- a/src/main/resources/config/course_config.properties
+++ b/src/main/resources/config/course_config.properties
@@ -1,4 +1,5 @@
 COURSE_NAME = OOP
-COURSE_FULL_NAME=106-1 \u7269\u4ef6\u5c0e\u5411\u8a2d\u8a08\u5be6\u7fd2<br>(OO Design Lab.)
+COURSE_FULL_NAME=106-2 \u7269\u4EF6\u5C0E\u5411\u8A2D\u8A08\u5BE6\u7FD2<br>(OO Design Lab.)
 COURSE_SCHOOL_EMAIL = @fcu.edu.tw
 COURSE_TOMCAT_SERVER_IP = http://140.134.26.71:10088
+#COURSE_TOMCAT_SERVER_IP = http://140.134.26.72:4234
