--- a/src/main/resources/config/gitlab_config.properties
+++ b/src/main/resources/config/gitlab_config.properties
@@ -1,6 +1,7 @@
 GITLAB_ROOT_USERNAME = root
 GITLAB_ROOT_PASSWORD = iecsfcu123456
 
+GITLAB_CONTAINER = http://4e248dddce33
 GITLAB_HOST_URL = http://140.134.26.71:20080
 GITLAB_API_TOKEN = yUnRUT5ex1s3HU7yQ_g-
 GITLAB_ROOT_URL = http://root:iecsfcu123456@140.134.26.71:20080
